@@ -2114,6 +2114,13 @@ argument_list|)
 decl_stmt|;
 if|if
 condition|(
+name|t
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
 operator|!
 name|t
 operator|.
@@ -2151,6 +2158,14 @@ operator|.
 name|length
 index|]
 expr_stmt|;
+block|}
+else|else
+block|{
+name|termsEnum
+operator|=
+literal|null
+expr_stmt|;
+block|}
 block|}
 if|if
 condition|(
