@@ -169,6 +169,19 @@ name|lucene
 operator|.
 name|document
 operator|.
+name|StoredField
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
 name|StringField
 import|;
 end_import
@@ -300,6 +313,19 @@ operator|.
 name|search
 operator|.
 name|IndexSearcher
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|MatchAllDocsQuery
 import|;
 end_import
 begin_import
@@ -8324,6 +8350,256 @@ index|[
 literal|0
 index|]
 argument_list|)
+argument_list|)
+expr_stmt|;
+name|ir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|testFieldSometimesMissingFromSegment
+specifier|public
+name|void
+name|testFieldSometimesMissingFromSegment
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriterConfig
+name|iwc
+init|=
+name|newIndexWriterConfig
+argument_list|(
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|iwc
+operator|.
+name|setMergePolicy
+argument_list|(
+name|newLogMergePolicy
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|RandomIndexWriter
+name|iw
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|dir
+argument_list|,
+name|iwc
+argument_list|)
+decl_stmt|;
+name|FieldType
+name|offsetsType
+init|=
+operator|new
+name|FieldType
+argument_list|(
+name|TextField
+operator|.
+name|TYPE_STORED
+argument_list|)
+decl_stmt|;
+name|offsetsType
+operator|.
+name|setIndexOptions
+argument_list|(
+name|IndexOptions
+operator|.
+name|DOCS_AND_FREQS_AND_POSITIONS_AND_OFFSETS
+argument_list|)
+expr_stmt|;
+name|Field
+name|body
+init|=
+operator|new
+name|Field
+argument_list|(
+literal|"body"
+argument_list|,
+literal|"foo"
+argument_list|,
+name|offsetsType
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|body
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+comment|// Make a 2nd segment where body is only stored:
+name|iw
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|doc
+operator|=
+operator|new
+name|Document
+argument_list|()
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|StoredField
+argument_list|(
+literal|"body"
+argument_list|,
+literal|"foo"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|IndexReader
+name|ir
+init|=
+name|iw
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
+name|iw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|IndexSearcher
+name|searcher
+init|=
+name|newSearcher
+argument_list|(
+name|ir
+argument_list|)
+decl_stmt|;
+name|PostingsHighlighter
+name|highlighter
+init|=
+operator|new
+name|PostingsHighlighter
+argument_list|()
+decl_stmt|;
+name|Query
+name|query
+init|=
+operator|new
+name|MatchAllDocsQuery
+argument_list|()
+decl_stmt|;
+name|TopDocs
+name|topDocs
+init|=
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|query
+argument_list|,
+literal|10
+argument_list|,
+name|Sort
+operator|.
+name|INDEXORDER
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|topDocs
+operator|.
+name|totalHits
+argument_list|)
+expr_stmt|;
+name|String
+name|snippets
+index|[]
+init|=
+name|highlighter
+operator|.
+name|highlight
+argument_list|(
+literal|"body"
+argument_list|,
+name|query
+argument_list|,
+name|searcher
+argument_list|,
+name|topDocs
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|snippets
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"foo"
+argument_list|,
+name|snippets
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|snippets
+index|[
+literal|1
+index|]
 argument_list|)
 expr_stmt|;
 name|ir
